BuildHughes/translation-tool/inputs/source_meta/objects/DSSWebService__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>To store DSS Web Service connection parameters, instead of hard coding in the Apex classes.</description>
    <fields>
        <fullName>DSSConnectionPW__c</fullName>
        <label>DSSConnectionPW</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSSConnectionUN__c</fullName>
        <label>DSSConnectionUN</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSSHostIPAddress__c</fullName>
        <description>For IP address.</description>
        <label>DSSHostIPAddress</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSSHostName__c</fullName>
        <description>Use this to store the host FQDN. .</description>
        <label>DSSHostName</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSSPIMReceiverURL__c</fullName>
        <description>https://www.myhughesnet.com:/pim/ent/MessageReceiver.servlet</description>
        <label>DSSPIMReceiverURL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSSTimeout__c</fullName>
        <label>DSSTimeout</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>DSS Web Service</label>
</CustomObject>